--- a/index.html
+++ b/index.html
@@ -18,46 +18,10 @@
         <img src="imagens/logo-grande.png" alt="">
     </header>
     <main>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
+        <h1>Quem Somos?</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
+        </p>
     </main>
 </body>
 </html>
