Adicionando conteúdo e modificando estilos

--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
         <img src="imagens/logo-grande.png" alt="">
     </header>
     <main>
-        <h1>Quem Somos?</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
-        </p>
+        <section>
+            <h1>Quem Somos?</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
+            </p>
+        </section>
+        <section>
+            <h1>Produtos</h1>
+            <img src="imagens/cafe-espresso.jpg" alt="café espresso com latte art de coração">
+            <img src="imagens/macarrons.jpg" alt="macarrons em um prato com uma estatueta de coelho">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quibusdam, quis impedit tempora</p>
+            <a href="#" class="linkbtn">Ver Catalogo</a>
+        </section>
     </main>
 </body>
 </html>
