Campos de contatos e redes sociais

--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="imagens/logo-pequena.png" type="image/x-icon">
     <title>Coffee Shops Tia Rosa</title>
 </head>
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="#">Quem Somos</a>
-            <a href="#">Produtos</a>
-            <a href="#">Contatos</a>
-            <a href="#">Redes Sociais</a>
+            <a href="produtos.html">Produtos</a>
         </nav>
         <img src="imagens/logo-grande.png" alt="">
     </header>
@@ -21,16 +19,40 @@
         <section>
             <h1>Quem Somos?</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolorem illo, inventore quaerat sapiente harum suscipit, deserunt alias fugiat officiis sint eos sunt doloremque, magnam sequi officia a animi ipsa!
+                Nós somos o Coffee Shops Tia Rosa, um lugar que busca oferecer aos nossos clientes momentos relaxantes enquanto desfrutam de um bom café. Um lugar agradável, onde pode começar o dia com um excelente café da manhã, ou se pode-se encontrar com os amigos para uma conversa discontraida no meio de uma tarde de semana.
             </p>
         </section>
         <section>
             <h1>Produtos</h1>
             <img src="imagens/cafe-espresso.jpg" alt="café espresso com latte art de coração">
             <img src="imagens/macarrons.jpg" alt="macarrons em um prato com uma estatueta de coelho">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quibusdam, quis impedit tempora</p>
-            <a href="#" class="linkbtn">Ver Catalogo</a>
+            <p>
+                Oferecemos diferentes tipos de bebidas, que vão do mais simples café a um delicioso caputino, além de também oferecer chás e sucos dos mais diversos. E como acompanhamento ofercemos doces, como bolos e tortas, além de opções mais salgadas, como pãezinhos e salgados no geral. Veja nosso catalogo de produtos e descubra tudo o que podemos oferecer.
+            </p>
+            <a href="produtos.html" class="linkbtn">Ver Catalogo</a>
+        </section>
+        <section>
+            <div>
+                <h1>Contatos</h1>
+                <p><img src="imagens/logo-telefone.png" alt="logo de um telefone"> (61) 3544-2533</p>
+                <p><img src="imagens/logo-whatsapp.png" alt="logo do Whatsapp"> (61) 9 9365-4452</p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h1>Redes Sociais</h1>
+                <a href="https://pt-br.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="logo-social" src="imagens/logo-facebook.jpg" alt="Logo do Facebook">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="logo-social" src="imagens/logo-instagram.jpg" alt="Logo do Instagram">
+                </a>
+            </div>
         </section>
     </main>
+    <footer>
+        <img src="imagens/logo-pequena.png" alt="">
+        <p>&copy; 2024, COFFEE SHOPS TIA ROSA</p>
+    </footer>
 </body>
 </html>
