--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="imagens/cafe-espresso.jpg" alt="café espresso com latte art de coração">
             <img src="imagens/macarrons.jpg" alt="macarrons em um prato com uma estatueta de coelho">
             <p>
-                Oferecemos diferentes tipos de bebidas, que vão do mais simples café a um delicioso caputino, além de também oferecer chás e sucos dos mais diversos. E como acompanhamento ofercemos doces, como bolos e tortas, além de opções mais salgadas, como pãezinhos e salgados no geral. Veja nosso catalogo de produtos e descubra tudo o que podemos oferecer.
+                Oferecemos diferentes tipos de bebidas, que vão do mais simples café a um delicioso cappuccino, além de também oferecer chás e sucos dos mais diversos. E como acompanhamento ofercemos doces, como bolos e tortas, além de opções mais salgadas, como pãezinhos e salgados no geral. Veja nosso catalogo de produtos e descubra tudo o que podemos oferecer.
             </p>
             <a href="produtos.html" class="linkbtn">Ver Catalogo</a>
         </section>
