Layout e Estilo básico pagina catalogo

--- a/produtos.html
+++ b/produtos.html
@@ -14,10 +14,75 @@
             <a href="index.html">Home</a>
             <a href="#">Produto</a>
         </nav>
-        <img src="imagens/logo-grande.png" alt="">
+        <h1>Catalogo de Produtos</h1>
     </header>
     <main>
-        
+        <section>
+            <h1>Cafés</h1>
+            <div>
+                <img src="imagens/logo-telefone.png" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p>R$45,20</p>
+            </div>
+            <div>
+                <img src="imagens/logo-telefone.png" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p>R$45,20</p>
+            </div>
+            <div>
+                <img src="imagens/logo-telefone.png" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p>R$45,20</p>
+            </div>
+            <div>
+                <img src="imagens/logo-telefone.png" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p>R$45,20</p>
+            </div>
+        </section>
+        <section>
+            <h1>Chás</h1>
+            <div>
+                <img src="imagens/logo-telefone.png" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p>R$45,20</p>
+            </div>
+            <div>
+                <img src="imagens/logo-telefone.png" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p>R$45,20</p>
+            </div>
+            <div>
+                <img src="imagens/logo-telefone.png" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p>R$45,20</p>
+            </div>
+            <div>
+                <img src="imagens/logo-telefone.png" alt="">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p>R$45,20</p>
+            </div>
+        </section>
     </main>
+    <footer>
+        <img src="imagens/logo-pequena.png" alt="">
+        <p>&copy; 2024, COFFEE SHOPS TIA ROSA</p>
+    </footer>
 </body>
 </html>
