Adicionando rótulos para logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#">Home</a>
             <a href="produtos.html">Produtos</a>
         </nav>
-        <img src="imagens/logo-grande.png" alt="">
+        <img src="imagens/logo-grande.png" alt="logo marca Coffee Shops Tia Rosa com uma xícara de café no centro">
     </header>
     <main>
         <section>
@@ -51,7 +51,7 @@
         </section>
     </main>
     <footer>
-        <img src="imagens/logo-pequena.png" alt="">
+        <img src="imagens/logo-pequena.png" alt="Logo marca com um xícara de café no centro de um circulo">
         <p>&copy; 2024, COFFEE SHOPS TIA ROSA</p>
     </footer>
 </body>
