--- a/produtos.html
+++ b/produtos.html
@@ -20,68 +20,43 @@
         <section>
             <h1>Cafés</h1>
             <div>
-                <img src="imagens/logo-telefone.png" alt="">
+                <h1>Café Preto</h1>
+                <img src="imagens/produtos/cafe/cafe-preto.jpg" alt="xícara com café">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Um café simples servido em uma xícara.
                 </p>
-                <p>R$45,20</p>
+                <p class="preco">R$04,23</p>
             </div>
             <div>
-                <img src="imagens/logo-telefone.png" alt="">
+                <h1>Café Latte</h1>
+                <img src="imagens/produtos/cafe/cafe-latte.jpg" alt="xícara com café com leite">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Café com um generosa camada de leite.
                 </p>
-                <p>R$45,20</p>
+                <p class="preco">R$06,10</p>
             </div>
             <div>
-                <img src="imagens/logo-telefone.png" alt="">
+                <h1>Americano</h1>
+                <img src="imagens/produtos/cafe/cafe-americano.jpg" alt="xícara com café espresso do tipo Americano.">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Café espresso com o preparo Americano.
                 </p>
-                <p>R$45,20</p>
+                <p class="preco">R$07,25</p>
             </div>
             <div>
-                <img src="imagens/logo-telefone.png" alt="">
+                <h1>Cappuccino</h1>
+                <img src="imagens/produtos/cafe/cappuccino.jpg" alt="xícara com café espresso com uma camada de espuma de leite">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Um cappuccino com uma bela camada de leite
                 </p>
-                <p>R$45,20</p>
+                <p class="preco">R$08,50</p>
             </div>
-        </section>
-        <section>
-            <h1>Chás</h1>
-            <div>
-                <img src="imagens/logo-telefone.png" alt="">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <p>R$45,20</p>
-            </div>
-            <div>
-                <img src="imagens/logo-telefone.png" alt="">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <p>R$45,20</p>
-            </div>
-            <div>
-                <img src="imagens/logo-telefone.png" alt="">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <p>R$45,20</p>
-            </div>
-            <div>
-                <img src="imagens/logo-telefone.png" alt="">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </p>
-                <p>R$45,20</p>
-            </div>
+
+            <p>Todos os tipos de cafés oferecidos em xícara, em não for consumido no local, seram entregues em copos para café personalizados.</p>
         </section>
     </main>
     <footer>
-        <img src="imagens/logo-pequena.png" alt="">
+        <img src="imagens/logo-pequena.png" alt="Logo marca com um xícara de café no centro de um circulo">
         <p>&copy; 2024, COFFEE SHOPS TIA ROSA</p>
     </footer>
 </body>
