--- a/produtos.html
+++ b/produtos.html
@@ -19,71 +19,134 @@
     <main>
         <section>
             <h1>Cafés</h1>
-            <h2>Cafés Quente</h2>
-            <div>
-                <h1>Café Preto</h1>
-                <img src="imagens/produtos/cafe/cafe-preto.jpg" alt="xícara com café">
-                <p>
-                    Um café simples servido em uma xícara.
-                </p>
-                <p class="preco">R$04,23</p>
-            </div>
-            <div>
-                <h1>Café Latte</h1>
-                <img src="imagens/produtos/cafe/cafe-latte.jpg" alt="xícara com café com leite">
-                <p>
-                    Café com um generosa camada de leite.
-                </p>
-                <p class="preco">R$06,10</p>
-            </div>
-            <div>
-                <h1>Americano</h1>
-                <img src="imagens/produtos/cafe/cafe-americano.jpg" alt="xícara com café espresso do tipo Americano.">
-                <p>
-                    Café espresso com o preparo Americano.
-                </p>
-                <p class="preco">R$07,25</p>
-            </div>
-            <div>
-                <h1>Cappuccino</h1>
-                <img src="imagens/produtos/cafe/cappuccino.jpg" alt="xícara com café espresso com uma camada de espuma de leite">
-                <p>
-                    Um cappuccino com uma bela camada de leite
-                </p>
-                <p class="preco">R$08,50</p>
-            </div>
-            <div>
-                <h1>Espresso</h1>
-                <img src="imagens/produtos/cafe/cafe-espresso.jpg" alt="xícara com café espresso">
-                <p>
-                    Café espresso servido em uma xícara.
-                </p>
-                <p class="preco">R$07,25</p>
-            </div>
-            <div>
-                <h1>Cortado</h1>
-                <img src="imagens/produtos/cafe/cafe-cortado.jpg" alt="xícara com metade café e metade leite">
-                <p>
-                    Xícara de metade espresso e metade leite.
-                </p>
-                <p class="preco">R$10,75</p>
-            </div>
-            <div>
-                <h1>Red Eye</h1>
-                <img src="imagens/produtos/cafe/red-eye.jpg" alt="café red eye">
-                <p>
-                    Café espresso misturado com café de filtro.
-                </p>
-                <p class="preco">R$07,75</p>
-            </div>
-            <div>
-                <h1>Macchiato</h1>
-                <img src="imagens/produtos/cafe/macchiato.jpg" alt="Café Macchiato">
-                <p>
-                    Macchiato com creme de leite suave.
-                </p>
-                <p class="preco">R$10,50</p>
-            </div>
+
+            <article>
+                <h2>Cafés Quente</h2>
+                <div>
+                    <h1>Café Preto</h1>
+                    <img src="imagens/produtos/cafe/cafe-preto.jpg" alt="xícara com café">
+                    <p>
+                        Um café simples servido em uma xícara.
+                    </p>
+                    <p class="preco">R$04,23</p>
+                </div>
+                <div>
+                    <h1>Café Latte</h1>
+                    <img src="imagens/produtos/cafe/cafe-latte.jpg" alt="xícara com café com leite">
+                    <p>
+                        Café com um generosa camada de leite.
+                    </p>
+                    <p class="preco">R$06,10</p>
+                </div>
+                <div>
+                    <h1>Americano</h1>
+                    <img src="imagens/produtos/cafe/cafe-americano.jpg" alt="xícara com café espresso do tipo Americano.">
+                    <p>
+                        Café espresso com o preparo Americano.
+                    </p>
+                    <p class="preco">R$07,25</p>
+                </div>
+                <div>
+                    <h1>Cappuccino</h1>
+                    <img src="imagens/produtos/cafe/cappuccino.jpg" alt="xícara com café espresso com uma camada de espuma de leite">
+                    <p>
+                        Um cappuccino com uma bela camada de leite
+                    </p>
+                    <p class="preco">R$08,50</p>
+                </div>
+                <div>
+                    <h1>Espresso</h1>
+                    <img src="imagens/produtos/cafe/cafe-espresso.jpg" alt="xícara com café espresso">
+                    <p>
+                        Café espresso servido em uma xícara.
+                    </p>
+                    <p class="preco">R$07,25</p>
+                </div>
+                <div>
+                    <h1>Cortado</h1>
+                    <img src="imagens/produtos/cafe/cafe-cortado.jpg" alt="xícara com metade café e metade leite">
+                    <p>
+                        Xícara de metade espresso e metade leite.
+                    </p>
+                    <p class="preco">R$10,75</p>
+                </div>
+                <div>
+                    <h1>Red Eye</h1>
+                    <img src="imagens/produtos/cafe/red-eye.jpg" alt="café red eye">
+                    <p>
+                        Café espresso misturado com café de filtro.
+                    </p>
+                    <p class="preco">R$07,75</p>
+                </div>
+                <div>
+                    <h1>Macchiato</h1>
+                    <img src="imagens/produtos/cafe/macchiato.jpg" alt="Café Macchiato">
+                    <p>
+                        Macchiato com creme de leite suave.
+                    </p>
+                    <p class="preco">R$10,50</p>
+                </div>
+            </article>
+
+            <article>
+                <h2>Cafés Frio</h2>
+                <div>
+                    <h1>Cold Brew</h1>
+                    <img src="imagens/produtos/cafe/cold-brew.jpg" alt="Café feito com água em temperatura ambiente">
+                    <p>
+                        feito com água em temperatura ambiente.
+                    </p>
+                    <p class="preco">R$15,50</p>
+                </div>
+                <div>
+                    <h1>Affogato</h1>
+                    <img src="imagens/produtos/cafe/affogato.jpg" alt="Café espresso com soverte">
+                    <p>
+                        Café espresso junto com soverte.
+                    </p>
+                    <p class="preco">R$18,10</p>
+                </div>
+                <div>
+                    <h1>Cold Drip</h1>
+                    <img src="imagens/produtos/cafe/cold-drip.jpg" alt="Café do gotejamento de água fria nos grãos">
+                    <p>
+                        Água fria gotejada sobre o grãos de café.
+                    </p>
+                    <p class="preco">R$16,50</p>
+                </div>
+                <div>
+                    <h1>Nitro Café</h1>
+                    <img src="imagens/produtos/cafe/nitro-coffee.jpg" alt="Café frio de textura lisa e espumante">
+                    <p>
+                        Café frio de textura lisa e espumante.
+                    </p>
+                    <p class="preco">R$20,00</p>
+                </div>
+                <div>
+                    <h1>Café Tonic</h1>
+                    <img src="imagens/produtos/cafe/cafe-tonic.jpg" alt="Uma bebida que misturado café, gelo e tônico">
+                    <p>
+                        Bebida contendo café, gelo e tônico
+                    </p>
+                    <p class="preco">R$15,40</p>
+                </div>
+                <div>
+                    <h1>Ice Latte</h1>
+                    <img src="imagens/produtos/cafe/ice-latte.jpg" alt="Café, gelo e leite espumado">
+                    <p>
+                        Café tradicional com muito gelo e leite espumado.
+                    </p>
+                    <p class="preco">R$15,40</p>
+                </div>
+                <div>
+                    <h1>Cappuccino</h1>
+                    <img src="imagens/produtos/cafe/ice-cappuccino.jpg" alt="Cappuccino frio com gelo e espuma de leite">
+                    <p>
+                        Cappuccino frio, gelo e espuma de leite.
+                    </p>
+                    <p class="preco">R$25,40</p>
+                </div>
+            </article>
 
             <p>Todos os tipos de cafés oferecidos em xícara, em não for consumido no local, seram entregues em copos para café personalizados.</p>
         </section>
