Cafés quente adicionado ao catalogo

--- a/produtos.html
+++ b/produtos.html
@@ -19,6 +19,7 @@
     <main>
         <section>
             <h1>Cafés</h1>
+            <h2>Cafés Quente</h2>
             <div>
                 <h1>Café Preto</h1>
                 <img src="imagens/produtos/cafe/cafe-preto.jpg" alt="xícara com café">
@@ -50,6 +51,38 @@
                     Um cappuccino com uma bela camada de leite
                 </p>
                 <p class="preco">R$08,50</p>
+            </div>
+            <div>
+                <h1>Espresso</h1>
+                <img src="imagens/produtos/cafe/cafe-espresso.jpg" alt="xícara com café espresso">
+                <p>
+                    Café espresso servido em uma xícara.
+                </p>
+                <p class="preco">R$07,25</p>
+            </div>
+            <div>
+                <h1>Cortado</h1>
+                <img src="imagens/produtos/cafe/cafe-cortado.jpg" alt="xícara com metade café e metade leite">
+                <p>
+                    Xícara de metade espresso e metade leite.
+                </p>
+                <p class="preco">R$10,75</p>
+            </div>
+            <div>
+                <h1>Red Eye</h1>
+                <img src="imagens/produtos/cafe/red-eye.jpg" alt="café red eye">
+                <p>
+                    Café espresso misturado com café de filtro.
+                </p>
+                <p class="preco">R$07,75</p>
+            </div>
+            <div>
+                <h1>Macchiato</h1>
+                <img src="imagens/produtos/cafe/macchiato.jpg" alt="Café Macchiato">
+                <p>
+                    Macchiato com creme de leite suave.
+                </p>
+                <p class="preco">R$10,50</p>
             </div>
 
             <p>Todos os tipos de cafés oferecidos em xícara, em não for consumido no local, seram entregues em copos para café personalizados.</p>
