Atualização da pagina principal

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <section>
             <div>
                 <h1>Contatos</h1>
+                <p>Entre em contato conosco pelo nosso Telefone ou Whatsapp, realizamos pedidos para Delivery também.</p>
                 <p><img src="imagens/logo-telefone.png" alt="logo de um telefone"> (61) 3544-2533</p>
                 <p><img src="imagens/logo-whatsapp.png" alt="logo do Whatsapp"> (61) 9 9365-4452</p>
             </div>
@@ -41,6 +42,7 @@
         <section>
             <div>
                 <h1>Redes Sociais</h1>
+                <p>Siga as nossas Redes Sociais para ficar por dentro de todas as novidades que temos a oferecer aos nossos clientes.</p>
                 <a href="https://pt-br.facebook.com/" target="_blank" rel="noopener noreferrer">
                     <img class="logo-social" src="imagens/logo-facebook.jpg" alt="Logo do Facebook">
                 </a>
