--- a/produtos.html
+++ b/produtos.html
@@ -17,7 +17,7 @@
         <h1>Catalogo de Produtos</h1>
     </header>
     <main>
-        <!--Cafés-->>
+        <!--Cafés-->
         <section><!--Cafés Quentes-->
             <h1>Cafés</h1>
             <h2>Cafés Quente</h2>
@@ -184,18 +184,24 @@
             <h1>Chás</h1>
             <h2>Chás Quente</h2>
             <article>
-                <h1>Mate limão</h1>
+                <h1>Earl Grey</h1>
+                <div>
+                    <img src="imagens/produtos/cha/earl-grey.jpg" alt="Xícara de chá earl grey">
+                    <p>Um chá tradicional e um dos mais apreciados</p>
+                    <p class="preco">R$05,60</p>
+                </div>
+            </article>
+        </section>
+        
+        <section><!--Chás Frios-->
+            <h2>Chás Gelado</h2>
+            <article>
+                <h1>Mate com limão</h1>
                 <div>
                     <img src="imagens/produtos/cha/mate-limão.jpg" alt="Copo com chá de mate com limão">
                     <p>Chá mate misturado com limão.</p>
                     <p class="preco">R$05,60</p>
                 </div>
-            </article>
-        </section>
-
-        <section><!--Chás Frios-->
-            <article>
-                <h2>Chás Gelado</h2>
             </article>
 
             <p>Todos os tipos de bebidas oferecidos em xícaras ou copos, que não forem ser consumidos no local, seram entregues em copos descartáveis personalizados.</p>
