Catalogo de chás

--- a/produtos.html
+++ b/produtos.html
@@ -188,7 +188,31 @@
                 <div>
                     <img src="imagens/produtos/cha/earl-grey.jpg" alt="Xícara de chá earl grey">
                     <p>Um chá tradicional e um dos mais apreciados</p>
-                    <p class="preco">R$05,60</p>
+                    <p class="preco">R$03,80</p>
+                </div>
+            </article>
+            <article>
+                <h1>Chá de Hibisco</h1>
+                <div>
+                    <img src="imagens/produtos/cha/cha-hibisco.jpg" alt="Xícara de chá de hibisco">
+                    <p>Um chá feito usando flores de hibisco.</p>
+                    <p class="preco">R$05,40</p>
+                </div>
+            </article>
+            <article>
+                <h1>Chá de Maçã</h1>
+                <div>
+                    <img src="imagens/produtos/cha/cha-maca.jpg" alt="Xícara de chá de maçã">
+                    <p>Chá de maçã com canela.</p>
+                    <p class="preco">R$08,60</p>
+                </div>
+            </article>
+            <article>
+                <h1>Chá de Gengibre</h1>
+                <div>
+                    <img src="imagens/produtos/cha/cha-gengibre.jpg" alt="Xícara de chá de gengibre">
+                    <p>Chá de gengibre com suco de limão.</p>
+                    <p class="preco">R$08,60</p>
                 </div>
             </article>
         </section>
@@ -201,6 +225,30 @@
                     <img src="imagens/produtos/cha/mate-limão.jpg" alt="Copo com chá de mate com limão">
                     <p>Chá mate misturado com limão.</p>
                     <p class="preco">R$05,60</p>
+                </div>
+            </article>
+            <article>
+                <h1>Mate com abacaxi</h1>
+                <div>
+                    <img src="imagens/produtos/cha/mate-abacaxi.jpg" alt="Copo com chá de mate com abacaxi">
+                    <p>Chá mate misturado com abacaxi.</p>
+                    <p class="preco">R$05,60</p>
+                </div>
+            </article>
+            <article>
+                <h1>Chá gelado de pêssego</h1>
+                <div>
+                    <img src="imagens/produtos/cha/gelado-pessego.jpg" alt="Copo com chá gelado de pêssego">
+                    <p>Chá gelado de pêssego.</p>
+                    <p class="preco">R$07,20</p>
+                </div>
+            </article>
+            <article>
+                <h1>Chá gelado com casca de abacaxi</h1>
+                <div>
+                    <img src="imagens/produtos/cha/casca-abacaxi.jpg" alt="Copo com chá gelado com casca de abacaxi">
+                    <p>Chá gelado com casca de abacaxi</p>
+                    <p class="preco">R$07,20</p>
                 </div>
             </article>
 
